fix: actualizar comandos de construcción y inicio del servicio apollo-backend en render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -12,8 +12,8 @@ services:
     region: frankfurt
     plan: free
     rootDir: backend
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn apollo_backend.main:app --workers 1 --worker-class uvicorn.workers.UvicornWorker --bind 0.0.0.0:$PORT
+    buildCommand: pip install -r requirements.txt && pip install -e .
+    startCommand: cd src && gunicorn apollo_backend.main:app --workers 1 --worker-class uvicorn.workers.UvicornWorker --bind 0.0.0.0:$PORT
     envVars:
       - key: DATABASE_URL
         fromDatabase:
