--- a/render.yaml
+++ b/render.yaml
@@ -23,6 +23,8 @@ services:
         generateValue: true
       - key: FRONTEND_URL
         sync: false
+      - key: HUGGINGFACE_API_KEY
+        sync: false
       - key: PYTHON_VERSION
         value: 3.13.0
 
